Fix Body spacing

--- a/style.css
+++ b/style.css
@@ -1061,7 +1061,6 @@ footer.footer__one .footer__block {
 @media(max-width: 992px) {
 	body {
   	font-size: 1.15rem;
-		padding-top: 60px;
 	}
 	main {
 	  padding: 3.5rem 0;
